<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/name_insert" />


        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_string"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/first_quest" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question_1_answer_1_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_first_answer" />

            <RadioButton
                android:id="@+id/question_1_answer_2_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_second_answer" />

            <RadioButton
                android:id="@+id/question_1_answer_3_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_third_answer" />
        </RadioGroup>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/second_quest" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/question_2_answer_1_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_fourth_answer" />

            <RadioButton
                android:id="@+id/question_2_answer_2_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_fifth_answer" />

            <RadioButton
                android:id="@+id/question_2_answer_3_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_sixth_answer" />
        </RadioGroup>

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/third_quest" />

        <EditText
            android:id="@+id/historical_figure_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/favorite_string"
            android:inputType="textCapWords" />

        <TextView
            style="@style/HeaderTextStyle"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/fourth_quest" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/question_4_answer_1_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="@string/is_romolus"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_4_answer_2_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="@string/is_ancus"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_4_answer_3_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:text="@string/is_pompeo"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_id"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginTop="16dp"
            android:onClick="submitQuizButton"
            android:text="@string/submit_quiz_button_text" />
    </LinearLayout>
</ScrollView>